Changed webpage title

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <link rel="stylesheet" href="stylesheet.css" />
     <meta charset="UTF-8" />
-    <title>My First Webpage</title>
+    <title>Rock Paper Scissors</title>
   </head>
   <body>
     <h1>ROCK PAPER SCISSORS</h1>
